--- a/packages/renderer/src/view/pages/SettingsPage/SettingsPage.css
+++ b/packages/renderer/src/view/pages/SettingsPage/SettingsPage.css
@@ -1,5 +1,4 @@
 .settings-page {
-    background-color: #f2f2f7;
     height: 100%;
     width: 100%;
 }
@@ -23,11 +22,17 @@
     font-weight: 300;
     font-size: 1rem;
 }
+.settings-container .text-box input[type="text"] {
+    font-size: 0.8rem;
+    font-weight: 200;
+    color: rgb(42, 42, 42);
+  }
 
 .settings-container select {
     width: 120px;
     background-color: #c8c8c835;
-    border: none;
+    border-radius: 0.3rem;
+    border-color: wheat;
     color: rgba(0, 0, 0, 0.802);
 
 }
@@ -51,7 +56,7 @@
     gap: 10px;
 }
 .settings-container button {
-    padding: 0.5rem;
+    padding: 0.5rem 0.7rem 0.5rem 0.7rem;
     border: none;
     border-radius: 0.3rem;
     background-color: #c8c8c8;
@@ -63,33 +68,8 @@
 }
 
 .settings-container button:hover {
-    background-color: #716f6f;
+    background-color: #8b8b8b;
 }
-/* input[type="text"] {
-flex: 1;
-padding: 0.5rem;
-border: 1px solid #ccc;
-border-radius: 0.25rem;
-font-size: 1rem;
-line-height: 1.5;
-}
-
-button {
-margin-left: 1rem;
-padding: 0.5rem 1rem;
-border: none;
-border-radius: 0.25rem;
-background-color: #007bff;
-color: #fff;
-font-size: 1rem;
-line-height: 1.5;
-cursor: pointer;
-transition: background-color 0.2s ease-in-out;
-}
-
-button:hover {
-background-color: #0069d9;
-} */
 
 .dark-mode {
     filter: invert(100%);
