--- a/packages/renderer/src/view/pages/SettingsPage/SettingsPage.css
+++ b/packages/renderer/src/view/pages/SettingsPage/SettingsPage.css
@@ -47,6 +47,7 @@
 
 .settings-container .text-box {
     display: flex;
+    flex-direction: row;
     align-items: center;
     margin-bottom: 1rem;
     gap: 10px;
