New Feature: user profiles (#13)
* add ModalHeader

* add ModalBackground

* add setConfig()

* Add WordInfoModal

* add format helper functions

* abstracted LookupsTable to Table

* Add WordInfoModal styling

* refactor:  runQuery()

* add getLookupCount()

* add feature: word view in book modal

* add create app dir

* add initializeFileSystem()

* add user profile getter setter

* add config setter and formatting

* add cursor key in config

* use dynamic config

* add: handle login with profile

* refactor dropdown

* add settings page design

* add login as guest

* cleanup

* add profile change from topbar

* change svg location

* add save profile functionality

--- a/packages/renderer/src/view/components/Dropdown/Dropdown.css
+++ b/packages/renderer/src/view/components/Dropdown/Dropdown.css
@@ -1,43 +1,49 @@
 .dropdown-container {
     position: relative;
     display: inline-block;
-  }
-  
-  .dropdown-toggle {
-    background-color: #F6F6F6;
+}
+
+.dropdown-toggle {
+    background-color: #f6f6f6;
     color: #333;
     border: 1px solid #ccc;
-    padding: 6px 15px;
+    padding: 6px 20px;
     font-size: 1.05rem;
     cursor: pointer;
-    border-radius: 9px;
-  }
-  
-  .dropdown-content {
-    display: none;
+    border-radius: 10px;
+}
+
+.dropdown-content {
+    display: block;
     position: absolute;
-    z-index: 1;
+    z-index: 5;
     top: 100%;
-    left: 15%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 125px;
     background-color: #fff;
     border: 1px solid #ccc;
     border-top: none;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  }
-  
-  .dropdown-content.open {
-    display: block;
-  }
-  
-  .dropdown-content a {
-    color: #333;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.294);
+    border-radius: 8px;
+    overflow-y: auto;
+    height: fit-content;
+    max-height: 150px;
+}
+
+.dropdown-content a {
+    display: flex;
+    justify-content: center;
+    color: #000000;
     padding: 8px 30px;
     text-decoration: none;
-    display: block;
-  }
-  
-  .dropdown-content a:hover {
-    background-color: #f5f5f5;
-  }
-  
+    justify-content: center;
+    font-weight: 300;
+    font-size: 1rem;
+    cursor: pointer;
+    border-radius: 8px;
+}
 
+.dropdown-content a:hover {
+    background-color: #f5f5f5;
+}
