--- a/packages/renderer/src/view/components/Table/Table.css
+++ b/packages/renderer/src/view/components/Table/Table.css
@@ -5,7 +5,6 @@
     align-items: center;
 }
 
-
 .book-info-table th {
     font-weight: 300;
     padding: 1rem;
@@ -20,10 +19,6 @@
     border-bottom: 1px solid #dbdbdb;
     font-weight: 400;
     background-color: #fff;
-}
-
-.book-info-table tbody tr:hover {
-    background-color: #f5f5f5;
 }
 
 .book-info-table .button {
@@ -42,8 +37,7 @@
     color: #1565c0;
 }
 
-.book-info-table .material-icons {
-    font-size: 1.2rem;
-    vertical-align: middle;
-    color: #2196f3;
+.operation svg:hover {
+    transform: scale(1.2);
+    cursor: pointer;
 }
