--- a/packages/renderer/src/view/components/WordInfoModal/WordInfoModal.css
+++ b/packages/renderer/src/view/components/WordInfoModal/WordInfoModal.css
@@ -36,6 +36,8 @@
 
 .word-modal-body .header h3 {
     font-size: 2.3rem;
+    font-weight: 300;
+    margin: 0;
 }
 
 .word-modal-body .header .button-group {
@@ -91,6 +93,6 @@
 
 .word-modal-body .body h4 {
     font-weight: 300;
-    padding: 25px 0 15px 25px;
+    padding: 15px 0 15px 15px;
     margin: 0;
 }
