--- a/packages/renderer/src/view/pages/SettingsPage/SettingsPage.css
+++ b/packages/renderer/src/view/pages/SettingsPage/SettingsPage.css
@@ -1,31 +1,92 @@
 .settings-page {
-    background-color: #f2f2f7;
-    min-height: 100vh;
+    height: 100%;
+    width: 100%;
 }
 
-.toggle-button {
-    background-color: transparent;
+.settings-container h3 {
+    font-weight: 300;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid rgb(207, 195, 195);
+}
+
+.settings-container {
+    display: flex;
+    flex-direction: column;
+    padding-left: 20px;
+}
+
+.settings-container h4 {
+    margin: 0;
+    padding-bottom: 15px;
+    font-weight: 300;
+    font-size: 1rem;
+}
+
+.settings-container .text-box input[type="text"] {
+    font-size: 0.8rem;
+    font-weight: 200;
+    color: rgb(42, 42, 42);
+}
+
+.settings-container select {
+    width: 140px;
+    background-color: #c8c8c835;
+    border-radius: 8px;
+    border-color: wheat;
+    color: rgba(0, 0, 0, 0.802);
+    padding-left: 8px;
+
+}
+
+.settings-container option {
+    background-color: #9d9c9c35;
+    padding: 20px;
+}
+
+
+.settings-container .text-box {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 1rem;
+    gap: 10px;
+}
+
+.settings-container .profile-delete {
+    display: flex;
+    flex-direction: row;
+    width: fit-content;
+    gap: 10px;
+}
+
+.settings-container button {
+    padding: 0.5rem 0.7rem 0.5rem 0.7rem;
     border: none;
-    color: #007bfffd;
-    font-size: 16px;
-    font-weight: 600;
+    border-radius: 0.3rem;
+    background-color: #c8c8c8;
+    color: rgba(0, 0, 0, 0.802);
+    font-size: 0.7rem;
+    font-weight: bold;
     cursor: pointer;
+    transition: background-color 0.2s ease-in-out;
+}
+
+.settings-container button:hover {
+    background-color: #8b8b8b;
 }
 
 .dark-mode {
     filter: invert(100%);
-
 }
 
-.dark-mode *  {
-    box-shadow: none !important; 
+.dark-mode * {
+    box-shadow: none !important;
     text-shadow: none;
-
 }
-
 
 .dark-mode img,
 picture,
 video {
-    filter: invert(1)
+    filter: invert(1);
 }
