--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,14 +27,13 @@
         {% endif %}
         <a id='download-link-mac'
             href="https://github.com/saharzelo/kindle-companion/releases/download/APP_VERSION/Kindle-Companion-APP_VERSION.dmg"
-            class="btn appVersion"> Mac (.dmg)</a>
+            class="btn appVersion"> Mac (.dmg) </a>
         <a id='download-link-windows'
             href="https://github.com/saharzelo/kindle-companion/releases/download/APP_VERSION/Kindle-Companion-APP_VERSION.exe"
-            class="btn appVersion">Windows (.exe)</a>
+            class="btn appVersion"> Windows (.exe) </a>
         <a id='download-link-ubuntu'
             href="https://github.com/saharzelo/kindle-companion/releases/download/APP_VERSION/Kindle-Companion-APP_VERSION.snap"
-            class="btn appVersion"></i> Ubuntu(.snap)
-            (.snap)</a>
+            class="btn appVersion"></i> Ubuntu(.snap) </a>
         <a href="https://github.com/saharzelo/kindle-companion/releases/tag/APP_VERSION" class="btn appVersion">More
             Releases</a>
     </header>
